<?xml version="1.0"?>
<package format="2">
  <name>gz-physics7</name>
  <version>7.2.0</version>
  <description>Gazebo Physics : Physics classes and functions for robot applications</description>
  <maintainer email="scpeters@openrobotics.org">Steve Peters</maintainer>
  <license>Apache License 2.0</license>
  <url type="website">https://github.com/gazebosim/gz-physics</url>

  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>gz-cmake</build_depend>

  <depend>benchmark</depend>
  <depend>bullet</depend>
  <depend>dartsim</depend>
  <depend>eigen</depend>
  <depend>gz-common5</depend>
  <depend>gz-math7</depend>
  <depend>gz-plugin2</depend>
  <depend>gz-utils2</depend>
  <depend>sdformat14</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
