<?xml version="1.0"?>
<package format="2">
  <name>gz-physics9</name>
  <version>9.0.0</version>
  <description>Gazebo Physics : Physics classes and functions for robot applications</description>
  <maintainer email="scpeters@openrobotics.org">Steve Peters</maintainer>
  <license>Apache License 2.0</license>
  <url type="website">https://github.com/gazebosim/gz-physics</url>

  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>gz-cmake</build_depend>

  <depend>benchmark</depend>
  <depend>bullet</depend>
  <depend>DART</depend>
  <depend>eigen</depend>
  <depend>gz-common</depend>
  <depend>gz-math</depend>
  <depend>gz-plugin</depend>
  <depend>gz-utils</depend>
  <depend>sdformat</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
