<?xml version="1.0"?>
<package format="2">
  <name>gz-physics8</name>
  <version>8.3.0</version>
  <description>Gazebo Physics : Physics classes and functions for robot applications</description>
  <maintainer email="scpeters@openrobotics.org">Steve Peters</maintainer>
  <license>Apache License 2.0</license>
  <url type="website">https://github.com/gazebosim/gz-physics</url>

  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>gz-cmake4</build_depend>

  <depend>benchmark</depend>
  <depend>bullet</depend>
  <depend>DART</depend>
  <depend>eigen</depend>
  <depend>gz-common6</depend>
  <depend>gz-math8</depend>
  <depend>gz-plugin3</depend>
  <depend>gz-utils3</depend>
  <depend>sdformat15</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
