load(
    "@gz//bazel/skylark:build_defs.bzl",
    "GZ_ROOT",
    "GZ_VISIBILITY",
)
load(
    "@gz//bazel/lint:lint.bzl",
    "add_lint_tests",
)

private_headers = glob(["src/*.hh"])

sources = glob(
    ["src/*.cc"],
    exclude = [
        "src/*_TEST.cc",
        "src/plugin.cc",
    ],
)

cc_library(
    name = "bullet-featherstone",
    srcs = sources + private_headers,
    includes = ["include"],
    visibility = GZ_VISIBILITY,
    deps = [
        GZ_ROOT + "common",
        GZ_ROOT + "common/graphics",
        GZ_ROOT + "math/eigen3",
        GZ_ROOT + "physics",
        GZ_ROOT + "physics:sdf",
        GZ_ROOT + "third_party/bullet3:BulletCollision",
        GZ_ROOT + "third_party/bullet3:BulletDynamics",
    ],
)

cc_binary(
    name = "libgz-physics-bullet-featherstone-plugin.so",
    srcs = [
        "src/plugin.cc",
    ],
    linkshared = True,
    visibility = GZ_VISIBILITY,
    deps = [
        ":bullet-featherstone",
        GZ_ROOT + "plugin:register",
    ],
)

add_lint_tests()
